--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,19 +1,51 @@
 <div class="wrapper-masthead">
     <div class="container">
-        <header class="masthead clearfix">
+        <header class="masthead clearfix site-header">
             <a href="{{ site.baseurl }}/" class="site-avatar">
-            <img src="{{ site.avatar }}" />
+                <img src="{{ site.avatar }}"/>
             </a>
 
             <div class="site-info">
                 <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             </div>
+            <!--<nav>
+                <ul class="main-navigation">
+                    <li><a href="{{ site.baseurl }}/">Home</a></li>
+                    <li><a href="{{ site.baseurl }}/about">About Me</a></li>
+                    <li><a href="{{ site.baseurl }}/blog/archives">Archives</a></li>
+                </ul>
 
-            <p/>
-            <nav>
-                <!--<a href="{{ site.baseurl }}/">Home</a>-->
-                <a href="{{ site.baseurl }}/about">About Me</a>
-            </nav>
+                {% if site.simple_search %}
+                <form action="{{ site.simple_search }}" method="get">
+                    <fieldset role="search">
+                        <input type="hidden" name="sitesearch" value="{{ site.baseurl | shorthand_url }}">
+                        <input class="search" type="text" name="q" results="0" placeholder="Search"/>
+                    </fieldset>
+                </form>
+                {% endif %}
+            </nav>-->
+
+            <div id = "navbar" class="header-navigation">
+                <nav class="main-navigation" role="navigation">
+                    <h3 class="menu-toggle">Menu</h3>
+                    <div class="menu-menu-1-container">
+                        <ul class="nav-menu">
+                            <li class="menu-item"><a href="{{ site.baseurl }}/">Home</a></li>
+                            <li class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
+                            <li class="menu-item"><a href="{{ site.baseurl }}/blog/archives">Archives</a></li>
+                        </ul>
+                    </div>
+                    {% if site.simple_search %}
+                    <form class="search-form" role="search" method="get"  action="{{ site.simple_search }}">
+                        <label>
+                            <!--<span class="screen-reader-text">Search for:</span>-->
+                            <input class="search-field" type="search"  placeholder="Search &hellip;" value="" name="s"/>
+                        </label>
+                        <input class="search-submit" type="submit"  value="Search"/>
+                    </form>
+                    {% endif %}
+                </nav>
+            </div>
         </header>
     </div>
 </div>
