--- a/style.scss
+++ b/style.scss
@@ -192,6 +192,9 @@ img {
     display: block;
     margin: 0 auto;
   }
+  //border-bottom-width: 2px;
+  //border-bottom-style: solid;
+  //border-bottom-color: rgb(0, 0, 0);
 }
 
 .site-name {
@@ -221,7 +224,7 @@ img {
 }
 
 nav {
-  float: right;
+  //float: right;
   margin-top: 23px;
   font-family: $libreBaskerville;
   font-size: 14px;
@@ -310,11 +313,11 @@ footer {
 }
 
 // Custom from wordpress
-#navbar {
-  background-color: #404040;
-  margin: 0 auto;
-  width: 100%;
-}
+//#navbar {
+//  background-color: #404040;
+//  margin: 0 auto;
+//  width: 100%;
+//}
 
 .entry-img {
   text-align: center;
@@ -402,6 +405,154 @@ footer {
   }
 }
 
+/********************************** 5.0 Navigation
+----------------------------------------------- */
+/* 5.0.1 Site Navigation
+----------------------------------------------- */
+form {
+  margin: 0;
+}
+
+.main-navigation {
+  clear: both;
+  margin: 0 auto;
+  max-width: 960px;
+  min-height: 36px;
+  position: relative;
+}
+ul.nav-menu,
+div.nav-menu > ul {
+  margin: 0;
+  padding: 0 40px 0 0;
+  padding: 0 4rem 0 0;
+  list-style-type: none;
+}
+.nav-menu li {
+  float: left;
+  position: relative;
+}
+
+.nav-menu li a {
+  color: #ccc;
+  display: block;
+  font-family: Lato, sans-serif;
+  font-size: 11px;
+  font-size: 1.1rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 12px;
+  line-height: 1.2rem;
+  //padding: 12px 20px;
+  //padding: 1.2rem 2rem;
+  //padding: 5%;
+  //padding: 1rem 1.5rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.nav-menu li:hover > a,
+.nav-menu li a:hover {
+  background-color: #303030;
+  color: #fff;
+  -webkit-transition: none;
+  transition: none;
+}
+.nav-menu .sub-menu,
+.nav-menu .children {
+  background-color: #404040;
+  border-top: 0;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  display: none;
+  opacity: 0;
+  padding: 0;
+  position: absolute;
+  left: 0;
+  z-index: 99999;
+}
+.nav-menu .sub-menu{
+  width: 200px;
+}
+.nav-menu .sub-menu ul,
+.nav-menu .children ul {
+  border-left: 0;
+  left: 100%;
+  top: 0;
+}
+ul.nav-menu ul a,
+.nav-menu ul ul a {
+  margin: 0;
+  text-transform: none;
+  width: 200px;
+}
+ul.nav-menu ul a:hover,
+.nav-menu ul ul a:hover {
+  background-color: #303030;
+}
+ul.nav-menu li:hover > ul,
+.nav-menu ul li:hover > ul {
+  display: block;
+  opacity: 1;
+}
+//.nav-menu .current_page_item > a,
+//.nav-menu .current_page_ancestor > a,
+//.nav-menu .current-menu-item > a,
+//.nav-menu .current-menu-ancestor > a {
+//  background-color: #303030;
+//  color: #fff;
+//}
+.menu-toggle {
+  display: none;
+}
+#navbar {
+//  background-color: #404040;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.site-header .search-form {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.site-header .search-field {
+  background-color: transparent;
+  background-image: url(/images/search-icon.png);
+  background-position: 10px center;
+  background-repeat: no-repeat;
+  background-size: 24px 24px;
+  border: 0;
+  cursor: pointer;
+  height: 36px;
+  margin: 0;
+  padding: 0 0 0 42px;
+  padding: 0 0 0 4.2rem;
+  position: relative;
+  -webkit-transition: width 0.2s ease, background 0.2s ease;
+  transition: width 0.2s ease, background 0.2s ease;
+  width: 0;
+}
+.site-header .search-field:hover {
+  background-color: #303030;
+  -webkit-transition: none;
+  transition: none;
+}
+.site-header .search-field:focus {
+  background-color: #f5f5f5;
+  border: 0;
+  cursor: text;
+  outline: 0;
+  padding-right: 2px; /* Don't cut off the webkit search cancel button */
+  -webkit-transition: width 0.2s ease, background 0.2s ease;
+  transition: width 0.2s ease, background 0.2s ease;
+  width: 200px;
+}
+
+/* Search widget */
+.search-form .search-submit {
+  display: none;
+}
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
