--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,6 +44,15 @@
                         <input class="search-submit" type="submit"  value="Search"/>
                     </form>
                     {% endif %}
+
+                    % if site.simple_search %}
+                    <form action="{{ site.simple_search }}" method="get">
+                        <fieldset role="search">
+                            <input type="hidden" name="sitesearch" value="{{ site.baseurl | shorthand_url }}">
+                            <input class="search" type="text" name="q" results="0" placeholder="Search"/>
+                        </fieldset>
+                    </form>
+                    {% endif %}
                 </nav>
             </div>
         </header>
