--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -45,7 +45,7 @@
                     </form>
                     {% endif %}
 
-                    % if site.simple_search %}
+                    {% if site.simple_search %}
                     <form action="{{ site.simple_search }}" method="get">
                         <fieldset role="search">
                             <input type="hidden" name="sitesearch" value="{{ site.baseurl | shorthand_url }}">
