--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -48,7 +48,7 @@
                     {% if site.simple_search %}
                     <form action="{{ site.simple_search }}" method="get">
                         <fieldset role="search">
-                            <input type="hidden" name="sitesearch" value="{{ site.baseurl }}">
+                            <input type="hidden" name="sitesearch" value="{{ site.url | shorthand_url }}">
                             <input class="search" type="text" name="q" results="0" placeholder="Search"/>
                         </fieldset>
                     </form>
