--- a/style.scss
+++ b/style.scss
@@ -300,6 +300,10 @@ nav {
   }
 }
 
+.post h1 {
+  margin: 0.5em 0 0 0;
+}
+
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
@@ -322,6 +326,9 @@ footer {
 .entry-img {
   text-align: center;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 200px;
 }
 
 .btn {
