--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
     <div class="container">
         <footer class="footer">
             {% include svg-icons.html %}
-            <p class="copyright">&#169; {{ site.time | date: '%Y' }} - {{ site.author.name }} -
-                <span class="credit">Powered by <a href="https://jekyllrb.com/">Jekyll</a></span>
+            <p class="copyright">&#169; {{ site.time | date: '%Y' }} - {{ site.author.name }}
             </p>
         </footer>
     </div>
