--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=PT+Serif:r%7CLibre+Baskerville:r,i,b,bi&amp;subset=latin,latin-ext,latin,latin-ext"
           media="all">
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
     <!--<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png">-->
     <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png" />
     <link rel="shortcut" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png" />
