--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,18 +13,11 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=PT+Serif:r%7CLibre+Baskerville:r,i,b,bi&amp;subset=latin,latin-ext,latin,latin-ext"
           media="all">
-    <script type="text/javascript"
-            src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-            charset="utf-8">
-    </script>
-    <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      processEscapes: true
-    }
-  });
-    </script>
+
+    {% if page.use_math %}
+    {% include mathjax-support.html %}
+    {% endif %}
+
     <!--<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png">-->
     <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png"/>
     <link rel="shortcut" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png"/>
