Avoid repeat in Sfari.

--- a/style.scss
+++ b/style.scss
@@ -602,6 +602,7 @@ ul.nav-menu li:hover > ul,
   background-position-x: center;
   background-position-y: top;
   background-size: initial;
+  background-repeat: no-repeat;
   background-repeat-x: no-repeat;
   background-repeat-y: no-repeat;
 }
