--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,18 +1,10 @@
 <div class="wrapper-masthead">
     <div class="container">
         <header class="masthead clearfix site-header">
-            <!--            <a href="{{ site.baseurl }}/" class="site-avatar">
-                            <img src="{{ site.avatar }}"/>
-                        </a>
-
-                        <div class="site-info">
-                            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-                        </div>-->
-
             <div class="site-info">
                 <a class="home-link" href="{{ site.baseurl }}/" title="{{ site.name }}">
                     <h1 class="site-title">{{ site.name }}</h1>
-                    <h2 class="site-description">{{ site.time | date: "%A, %B %-d, %Y" }}</h2>
+                    <!--<h2 class="site-description">{{ site.time | date: "%A, %B %-d, %Y" }}</h2>-->
                 </a>
             </div>
 
