--- a/style.scss
+++ b/style.scss
@@ -191,6 +191,7 @@ img {
     float: none;
     display: block;
     margin: 0 auto;
+    padding: 0 0 10px 0;
   }
   border-bottom-width: 2px;
   border-bottom-style: solid;
@@ -293,13 +294,26 @@ nav {
     text-decoration-color: $red;
   }
 
-  .entry-meta {
-    font: 13px $libreBaskerville;
-    line-height: 20px;
-    color: rgba(0, 0, 0, 0.45);;
-    text-decoration-color: rgba(0, 0, 0, 0.45);
-    width: 940px;
-  }
+  //.entry-meta {
+  //  font: 13px $libreBaskerville;
+  //  line-height: 20px;
+  //  color: rgba(0, 0, 0, 0.45);;
+  //  text-decoration-color: rgba(0, 0, 0, 0.45);
+  //  width: 940px;
+  //}
+}
+
+.entry-meta {
+  font: 12px $libreBaskerville;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.45);;
+  text-decoration-color: rgba(0, 0, 0, 0.45);
+  //width: 940px;
+  width: 100%;
+  clear: both;
+  display: block;
+  text-align: left;
+  margin: 0 auto;
 }
 
 .post h1 {
@@ -428,13 +442,14 @@ form {
   max-width: 960px;
   min-height: 36px;
   position: relative;
+  overflow: auto;
 }
 
 ul.nav-menu,
 div.nav-menu > ul {
   margin: 0;
-  padding: 0 40px 0 0;
-  padding: 0 4rem 0 0;
+  padding: 0 30px 0 0;
+  padding: 0 3rem 0 0;
   list-style-type: none;
 }
 
@@ -449,8 +464,7 @@ div.nav-menu > ul {
   font-family: Lato, sans-serif;
   font-size: 8px;
   font-size: 0.8rem;
-
-  font-weight: 400;
+  font-weight: 300;
   letter-spacing: 2px;
   line-height: 12px;
   line-height: 1.2rem;
@@ -458,6 +472,10 @@ div.nav-menu > ul {
   //padding: 1.2rem 2rem;
   //padding: 5%;
   //padding: 1rem 1.5rem;
+
+  //width: 100%;
+  //height: 100%;
+
   text-decoration: none;
   text-transform: uppercase;
   -webkit-transition: all 0.3s;
@@ -630,6 +648,183 @@ ul.nav-menu li:hover > ul,
   padding: 40px 0 5px;
   padding: 4rem 0 0.5rem;
   //text-transform: uppercase;
+}
+
+@media only screen and (min-width: 868px) and (max-width: 959px) {
+  .site-header {
+    background-size: 100%;
+  }
+}
+
+/* Mobile (Portrait) */
+@media only screen and (max-width: 868px) {
+  .wrapper-masthead {
+    margin-bottom: 20px;
+  }
+
+  .site-header {
+    //background-image: none;
+    background-size: 100%;
+  }
+
+  .site-info {
+    //margin: 0 0 10px 0;
+    padding: 0 0 0 0;
+  }
+
+  .site-header .home-link {
+    min-height: 90%;
+  }
+
+  .entry-meta {
+    width: 100%;
+  }
+
+  .post .more-link {
+    width: 100%;
+  }
+
+  //.site-header .home-link,
+  //.home-link,
+  .masthead,
+  .main-navigation,
+  .posts,
+  .post,
+  .post h1,
+  .entry-img,
+  .entry,
+ // .post .more-link,
+//  .post .entry-meta,
+  .pagination,
+
+  .site-main,
+  .site-footer .sidebar-inner,
+  .site-info,
+  .site-main .sidebar-container,
+  .one-footer-sidebar .site-footer .widget-area,
+  .two-footer-sidebars .site-footer .widget-area,
+  .three-footer-sidebars .site-footer .widget-area {
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  //.posts .post {
+  //  clear: both;
+  //  float: none;
+  //}
+
+  .site-main .sidebar-container {
+    clear: both;
+    float: none;
+  }
+  .site-main .content-area,
+  .single-attachment .content-area,
+  .full-width .content-area {
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+  }
+  .site-main .content-area {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    margin-bottom: 1rem;
+    padding-bottom: 10px;
+    padding-bottom: 1rem;
+  }
+  .site-title {
+    font-size: 20px;
+    font-size: 2rem;
+    padding-top: 20px;
+    padding-top: 2rem;
+    width: 100%;
+   // margin: 0;
+  }
+
+  .container {
+    //border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    margin-bottom: 1rem;
+    padding-bottom: 10px;
+    padding-bottom: 1rem;
+  }
+
+  /* Small menu */
+  .menu-toggle {
+ //   background-color: #303030;
+    color: #888;
+//    color: #303030;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Lato, sans-serif;
+    font-size: 11px;
+    font-size: 1.1rem;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 1;
+    margin: 0;
+    padding: 12px 20px;
+    padding: 1.2rem 2rem;
+    text-transform: uppercase;
+  }
+  .toggled-on .nav-menu,
+  .toggled-on .nav-menu > ul {
+    display: block;
+    margin-left: 0;
+    padding: 0;
+    width: 100%;
+  }
+  .toggled-on li,
+  .toggled-on .children {
+    display: block;
+    float: none;
+  }
+  .toggled-on .nav-menu li > ul {
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: none;
+    display: block;
+    float: none;
+    left: auto;
+    margin-left: 20px;
+    opacity: 1;
+    position: relative;
+    top: auto;
+  }
+  .toggled-on .nav-menu li > ul a {
+    text-transform: uppercase;
+    width: auto;
+  }
+  .toggled-on .nav-menu li:hover > a,
+  .toggled-on .nav-menu .children a {
+    background-color: transparent;
+    color: #ccc;
+  }
+  .toggled-on .nav-menu li a:hover,
+  .toggled-on .nav-menu ul a:hover {
+    background-color: #303030;
+    color: #fff;
+  }
+  ul.nav-menu,
+  div.nav-menu > ul {
+    display: none;
+  }
+
+  /* Gallery */
+  .gallery {
+    margin-left: 0;
+  }
+  .gallery-caption {
+    display: none;
+  }
+  .gallery-columns-2 .gallery-item {
+    max-width: 49%;
+    max-width: -webkit-calc(50% - 4px);
+    max-width: calc(50% - 4px);
+  }
+  .gallery-columns-3 .gallery-item {
+    max-width: 33%;
+    max-width: -webkit-calc(33% - 4px);
+    max-width: calc(33% - 4px);
+  }
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
