formatting changes and hamburger menu.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,6 @@
 {% include footer.html %}
 
 {% include analytics.html %}
+<script src='{{ site.baseurl }}/js/menu.js'></script>
 </body>
 </html>
