--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=PT+Serif:r%7CLibre+Baskerville:r,i,b,bi&amp;subset=latin,latin-ext,latin,latin-ext"
           media="all">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     {% if page.use_math %}
     {% include mathjax-support.html %}
@@ -20,4 +23,8 @@
 
     <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png"/>
     <link rel="shortcut" type="image/png" href="{{ site.baseurl }}/images/brick-icon.png"/>
+
+    <!--<script src='{{ site.baseurl }}/js/jquery-1.11.3.min.js'></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--<script src='{{ site.baseurl }}/js/menu.js'></script>-->
 </head>
