--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,8 @@
 <div class="wrapper-masthead">
     <div class="container">
         <header class="masthead clearfix site-header">
+
+            <!-- Title with background image -->
             <div class="site-info">
                 <a class="home-link" href="{{ site.baseurl }}/" title="{{ site.name }}">
                     <h1 class="site-title">{{ site.name }}</h1>
@@ -8,20 +10,20 @@
                 </a>
             </div>
 
+            <!-- Navigation bar -->
             <div id="navbar" class="header-navigation">
-                <nav id="site-navigation" class="navigation main-navigation" role="navigation">
+                <nav id="site-navigation" class="navigation main-navigation">
                     <h3 class="menu-toggle">Menu</h3>
                     <div class="menu-menu-1-container">
-                        <ul class="nav-menu">
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom
-                                  current-menu-item current_page_item">
-                                <a href="{{ site.baseurl }}/">Home</a></li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-                                    href="{{ site.baseurl }}/about">About Me</a></li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom"><a
-                                    href="{{ site.baseurl }}/blog/archives">Archives</a></li>
+                        <ul id="menu-menu-1" class="nav-menu">
+                            <li id="menu-item-1" class="menu-item"><a href="{{ site.baseurl }}/">Home</a></li>
+                            <li id="menu-item-2" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
+                            <li id="menu-item-3" class="menu-item">
+                                <a href="{{ site.baseurl }}/blog/archives">Archives</a></li>
                         </ul>
                     </div>
+
+                    <!-- search -->
                     <!--{% if site.simple_search %}-->
                     <!--<form class="search-form" role="search" method="get"  action="{{ site.simple_search }}">-->
                     <!--<label>-->
