--- a/style.scss
+++ b/style.scss
@@ -9,20 +9,18 @@
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
-/**************/
-/* BASE RULES */
-/**************/
-
-html {
-  font-size: 100%;
-}
-
+/*************************************/
+/*             GLOBAL                */
+/*************************************/
 body {
   background: $white;
-  //font: 18px/1.4 $libreBaskerville;
-  font: 13px $libreBaskerville;
-  line-height: 23px;
   color: $darkGray;
+
+  font-family: $libreBaskerville;
+  //font-size: 81%;
+  font-size: 13px;
+  text-align: justify;
+  line-height: 2;
 }
 
 .container {
@@ -33,37 +31,42 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $libreBaskerville;
   color: $darkerGray;
   font-weight: bold;
 
-  line-height: 1.7;
+  line-height: 80%;
   margin: 1em 0 15px;
   padding: 0;
 
   @include mobile {
-    line-height: 1.4;
+    //line-height: 1.4;
+    line-height: 70%;
   }
 }
 
 h1 {
-  font-size: 30px;
+  //font-size: 30px;
+  font-size: 230%;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  //font-size: 24px;
+  font-size: 185%;
 }
 
 h3 {
-  font-size: 20px;
+  //font-size: 20px;
+  font-size: 150%;
 }
 
 h4 {
-  font-size: 18px;
+  //font-size: 18px;
+  font-size: 138%;
   color: $gray;
+  //color:#3366ff;
 }
 
 p {
@@ -71,11 +74,13 @@ p {
 }
 
 a {
-  color: $blue;
+  //color: $blue;
+  color: $red;
   text-decoration: none;
   cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    //color: $blue;
+    color: $red;
   }
 }
 
@@ -145,13 +150,13 @@ img {
   clear: both;
 }
 
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
+/*************************************/
+/*        LAYOUT / SECTIONS          */
+/*************************************/
 
-//
-// .masthead
-//
+/////////////////////////////
+// NAVIGATION
+/////////////////////////////
 
 .wrapper-masthead {
   margin-bottom: 50px;
@@ -168,8 +173,6 @@ img {
 
 .site-avatar {
   float: left;
-  //width: 70px;
-  //height: 70px;
   width: 250px;
   height: 175px;
   margin-right: 15px;
@@ -206,8 +209,7 @@ img {
   cursor: pointer;
   font-family: $libreBaskerville;
   font-weight: 300;
-  //font-size: 28px;
-  font-size: 50px;
+  font-size: 385%;
   letter-spacing: 1px;
   word-wrap: break-word;
 
@@ -219,7 +221,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-size: 10px;
+  font-size: 77%;
 
   @include mobile {
     margin: 3px 0;
@@ -227,17 +229,15 @@ img {
 }
 
 nav {
-  //float: right;
   margin-top: 23px;
-  font-family: $libreBaskerville;
-  font-size: 14px;
+  font-size: 107%;
   text-transform: uppercase;
 
   @include mobile {
     float: none;
     margin-top: 9px;
     display: block;
-    font-size: 16px;
+    font-size: 107%;
   }
 
   a {
@@ -254,9 +254,16 @@ nav {
   }
 }
 
-//
-// .main
-//
+/////////////////////////////
+// MAIN
+/////////////////////////////
+.entry-img {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 200px;
+}
 
 .posts > .post {
   padding-bottom: 2em;
@@ -293,14 +300,6 @@ nav {
     color: $red;
     text-decoration-color: $red;
   }
-
-  //.entry-meta {
-  //  font: 13px $libreBaskerville;
-  //  line-height: 20px;
-  //  color: rgba(0, 0, 0, 0.45);;
-  //  text-decoration-color: rgba(0, 0, 0, 0.45);
-  //  width: 940px;
-  //}
 }
 
 .entry-meta {
@@ -320,6 +319,9 @@ nav {
   margin: 0.5em 0 0 0;
 }
 
+/////////////////////////////
+// FOOTER
+/////////////////////////////
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
@@ -332,19 +334,12 @@ footer {
   text-align: center;
 }
 
-// Custom from wordpress
-//#navbar {
-//  background-color: #404040;
-//  margin: 0 auto;
-//  width: 100%;
-//}
-
-.entry-img {
-  text-align: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 200px;
+footer .on-date a {
+  color: rgba(0, 0, 0, 0.45);
+  text-decoration-color: rgba(0, 0, 0, 0.45);
+  &:hover, &:active {
+    color: $red;
+  }
 }
 
 .btn {
@@ -544,6 +539,10 @@ ul.nav-menu li:hover > ul,
   display: none;
 }
 
+.menu-button {
+  display: none;
+}
+
 #navbar {
   //  background-color: #404040;
   margin: 0 auto;
@@ -615,14 +614,10 @@ ul.nav-menu li:hover > ul,
 }
 
 .site-header {
-  //  background-color: #000;
-  background-image: url('{{ site.baseurl }}/images/brick-bkg.png');
-  background-position-x: center;
-  background-position-y: top;
-  background-size: initial;
+  background-image: url(/images/brick-bkg.png);
+  background-size:contain;
+  background-position:center;
   background-repeat: no-repeat;
-  background-repeat-x: no-repeat;
-  background-repeat-y: no-repeat;
 }
 
 .site-header .home-link {
@@ -636,11 +631,12 @@ ul.nav-menu li:hover > ul,
 }
 
 .site-title {
-  //  color: #fff;
-  //font-family: Lato, sans-serif;
   font-family: $libreBaskerville;
-  font-size: 35px;
-  font-size: 3.5rem;
+  //font-size: 35px;
+  //font-size: 3.5rem;
+  //font-size: 40px;
+  //font-size: 4rem;
+  font-size: 492%;
   font-weight: 300;
   letter-spacing: 5px;
   line-height: 1;
@@ -693,17 +689,18 @@ ul.nav-menu li:hover > ul,
   .post h1,
   .entry-img,
   .entry,
- // .post .more-link,
-//  .post .entry-meta,
+    // .post .more-link,
+    //  .post .entry-meta,
   .pagination,
-
   .site-main,
   .site-footer .sidebar-inner,
   .site-info,
   .site-main .sidebar-container,
   .one-footer-sidebar .site-footer .widget-area,
   .two-footer-sidebars .site-footer .widget-area,
-  .three-footer-sidebars .site-footer .widget-area {
+  .three-footer-sidebars .site-footer .widget-area,
+  .page,
+  .page h1 {
     margin: 0 auto;
     width: 90%;
   }
@@ -737,8 +734,24 @@ ul.nav-menu li:hover > ul,
     padding-top: 20px;
     padding-top: 2rem;
     width: 100%;
-   // margin: 0;
+    // margin: 0;
   }
+
+  .post h1 {
+    font-size: 15px;
+    font-size: 1.5rem;
+  }
+
+  .page h1 {
+    font-size: 15px;
+    font-size: 1.5rem;
+  }
+
+  .page h3 {
+    font-size: 11px;
+    font-size: 1.1rem;
+  }
+
 
   .container {
     //border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -748,11 +761,33 @@ ul.nav-menu li:hover > ul,
     padding-bottom: 1rem;
   }
 
+  .menu-button {
+    display: block;
+    position: absolute;
+    //    top: 15px;
+    //    right: 15px;
+    border: 0;
+    text-indent: 200%;
+    overflow: hidden;
+    background: rgba(255, 255, 255, .8) url(/images/hamburger.png) center no-repeat;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    background-size: 80%;
+    width: 30px;
+    height: 30px;
+    outline: none;
+    transition: all 400ms ease;
+    //   &.expanded
+    //   transform: rotate(90deg);
+    background-color: transparent;
+    border: 0;
+  }
+
   /* Small menu */
-  .menu-toggle {
- //   background-color: #303030;
+  .menu-togglex {
+    //   background-color: #303030;
     color: #888;
-//    color: #303030;
+    //    color: #303030;
     cursor: pointer;
     display: inline-block;
     font-family: Lato, sans-serif;
@@ -766,6 +801,37 @@ ul.nav-menu li:hover > ul,
     padding: 1.2rem 2rem;
     text-transform: uppercase;
   }
+
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    //    top: 15px;
+    //    right: 15px;
+    border: 0;
+    text-indent: 200%;
+    overflow: hidden;
+    background: rgba(255, 255, 255, .8) url(/images/hamburger.png) center no-repeat;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    background-size: 80%;
+    width: 30px;
+    height: 30px;
+    outline: none;
+    transition: all 400ms ease;
+    .expanded {
+      transform: rotate(90deg);
+      background-color: transparent;
+    //  border: 0;
+    }
+    background-color: transparent;
+    //border: 0;
+    margin: 2px 0 0 0;
+  }
+
+  .menu-toggle.expanded {
+    transform: rotate(90deg);
+  }
+
   .toggled-on .nav-menu,
   .toggled-on .nav-menu > ul {
     display: block;
