--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="wrapper-masthead">
     <div class="container">
-        <header class="masthead clearfix site-header">
+        <header class="masthead site-header">
 
             <!-- Title with background image -->
             <div class="site-info">
