Added opacity to background image.

--- a/style.scss
+++ b/style.scss
@@ -614,7 +614,7 @@ ul.nav-menu li:hover > ul,
 }
 
 .site-header {
-  background-image: url(/images/brick-bkg.png);
+  background-image: url(/images/brick-bkg-0.65.png);
   background-size:contain;
   background-position:center;
   background-repeat: no-repeat;
