--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,6 +33,10 @@
                     <!--</form>-->
                     <!--{% endif %}-->
 
+                    <!--<form action="/search" method="get">-->
+                        <!--<input type="text" id="search-query" name="q" placeholder="Search" autocomplete="off">-->
+                    <!--</form>-->
+
                     <!--{% if site.simple_search %}-->
                     <!--<form class="search-form" role="search" method="get" action="{{ site.simple_search }}">-->
                     <!--<fieldset role="search">-->
