--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,6 @@
 
 {% include analytics.html %}
 <script src='{{ site.baseurl }}/js/menu.js'></script>
+<!--{% include search-support.html %}-->
 </body>
 </html>
