--- a/style.scss
+++ b/style.scss
@@ -574,7 +574,8 @@ ul.nav-menu li:hover > ul,
 }
 
 .site-header .search-field:hover {
-  background-color: #303030;
+ // background-color: #303030;
+  background-color: #ccc;
   -webkit-transition: none;
   transition: none;
 }
@@ -614,7 +615,7 @@ ul.nav-menu li:hover > ul,
 }
 
 .site-header {
-  background-image: url(/images/brick-bkg-0.65.png);
+  background-image: url(/images/brick-bkg-black-0.40.png);
   background-size:contain;
   background-position:center;
   background-repeat: no-repeat;
