--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,6 +20,8 @@
                             <li id="menu-item-2" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
                             <li id="menu-item-3" class="menu-item">
                                 <a href="{{ site.baseurl }}/blog/archives">Archives</a></li>
+                            <li id="menu-item-4" class="menu-item">
+                                <a href="{{ site.baseurl }}/blog/projects">Projects</a></li>
                         </ul>
                     </div>
 
