added docker invalid characters post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
     <![endif]-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.toc.js"></script>
+    <script src="{{ site.baseurl }}/js/custom.js"></script>
 
     {% if page.use_math %}
         {% include mathjax-support.html %}
