--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <article class="post">
+    {% include toc.html %}
     <img class="entry-img" src="{{ site.baseurl }}{{ page.image }}">
     <h1>{{ page.title }}</h1>
 
