modified layout added tags menu

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,7 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 $red: rgb(187, 0, 0);
+$navyBlue: #02075d;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
