--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,8 +4,8 @@
 
             <!-- Title with background image -->
             <div class="site-info">
-                <a class="home-link" href="{{ site.baseurl }}/" title="{{ site.name }}">
-                    <h1 class="site-title">{{ site.name }}</h1>
+                <a class="home-link" href="{{ site.baseurl }}/" title="{{ site.title }}">
+                    <h1 class="site-title">{{ site.title }}</h1>
                     <!--<h2 class="site-description">{{ site.time | date: "%A, %B %-d, %Y" }}</h2>-->
                 </a>
             </div>
@@ -20,8 +20,10 @@
                             <li id="menu-item-2" class="menu-item">
                                 <a href="{{ site.baseurl }}/blog/archives">Archives</a></li>
                             <li id="menu-item-3" class="menu-item">
+                                <a href="{{ site.baseurl }}/blog/tags">Tags</a></li>
+                            <li id="menu-item-4" class="menu-item">
                                 <a href="{{ site.baseurl }}/blog/projects">Projects</a></li>
-                            <li id="menu-item-4" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
+                            <li id="menu-item-5" class="menu-item"><a href="{{ site.baseurl }}/about">About Me</a></li>
                         </ul>
                     </div>
 
