--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,16 +7,15 @@ layout: default
     <img class="entry-img" src="{{ site.baseurl }}{{ page.image }}">
     <h1>{{ page.title }}</h1>
 
-    <div class="entry">
-        {{ content }}
+    <div class="date">
+        Posted on {{ page.date | date: "%B %e, %Y" }} &nbsp;| &nbsp;
+        {% for tag in page.tags %}
+        <a href="/blog/tags/#{{ tag | slugify }}" class="post-tag"> {{ tag }} </a>
+        {% endfor %}
     </div>
 
-    <div class="date">
-        Posted
-        {% if page.tags.size > 0 %}
-        in {{ page.tags | sort | join: ", " }}
-        {% endif %}
-        on {{ page.date | date: "%B %e, %Y" }}
+    <div class="entry">
+        {{ content }}
     </div>
 
     <!-- This loops through the paginated posts -->
