added favicon for shotcut

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }} – {{ site.description }}</title>
+    <link rel="shortcut icon" type="image/png" href="/images/brick-bkg-black-0.40.png">
 
     {% include meta.html %}
 
