added og:image metadata

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
     <meta name="author" content="{{ site.title }}" />
+    <meta property="og.image" content="/images/brick-bkg-black-0.40.png" />
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
