created page edited field and changed the logic of og:image

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,12 @@
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
     <meta name="author" content="{{ site.title }}" />
+
+    {% if page.image %}
+    <meta property="og:image" content="{{ site.baseurl }}{{ page.image }}" />
+    {% else %}
     <meta property="og:image" content="/images/brick-bkg-black-0.40.png" />
+    {% endif %}
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
