changed slide library to boostrap carousle from lightslider

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
         {% include mathjax-support.html %}
     {% endif %}
 
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}"
           href="{{ site.baseurl }}/feed.xml"/>
