show slide captions for small display

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -20,7 +20,7 @@
             <img src="{{ picture.url }}">
             {% endif %}
             {% if picture.caption %}
-            <div class="carousel-caption d-none d-md-block mb-4 text-wrap">
+            <div class="carousel-caption mb-4 text-wrap">
                 {{ picture.caption }}
             </div>
             {% endif %}
@@ -33,7 +33,7 @@
             <img src="{{ picture.url }}">
             {% endif %}
             {% if picture.caption %}
-            <div class="carousel-caption d-none d-md-block mb-4 text-wrap">
+            <div class="carousel-caption mb-4 text-wrap">
                {{ picture.caption }}
             </div>
             {% endif %}
