--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,5 +39,5 @@ layout: default
 
     {% include disqus.html %}
 
-    {% include utterance.html %}
+<!--    {% include utterance.html %}-->
 </article>
